--- a/generators/component/package.json.hbs
+++ b/generators/component/package.json.hbs
@@ -1,15 +1,9 @@
 {
- "name": "@noia-ui/{{dashCase name}}",
+  "name": "@noia-ui/{{dashCase name}}",
   "version": "1.0.0",
   "license": "MIT",
-  "description": "A Quick description of the component",
-  "dependencies": {
-    "react": "^17.0.1",
-    "styled-components": "^5.3.0",
-    "polished": "^4.1.3"
-  },
+  "description": "A React component that is a base button.",
   "devDependencies": {
-    "@types/react": "^17.0.13",
-    "@types/styled-components": "^5.1.11"
+    "react": "^17.0.1"
   }
 }
